--- a/BlazorApp/Shared/NavMenu.cshtml
+++ b/BlazorApp/Shared/NavMenu.cshtml
@@ -23,8 +23,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="help">
-                <span class="oi oi-info" aria-hidden="true"></span> Help
+            <NavLink class="nav-link" href="create">
+                <span class="oi oi-info" aria-hidden="true"></span> Posts
             </NavLink>
         </li>
     </ul>
